ie_um/src/main/java/com/example/ie_um/global/error/exception/AccessDeniedGroupException.java
package com.example.ie_um.global.error.exception;

public abstract class AccessDeniedGroupException extends RuntimeException {
    public AccessDeniedGroupException(String message) {
        super(message);
    }
}